Add localization support for English,Yoruba,Igbo,Hausa, and Pidgin

--- a/lib/l10n/app_pcm.arb
+++ b/lib/l10n/app_pcm.arb
@@ -1,9 +1,9 @@
 {
-  "@@locale": "en",
+  "@@locale": "pcm",
   "appTitle": "Nexus Fertility",
   "welcomeTitle": "Welcome to Nexus Fertility",
-  "welcomeSubtitle": "Your personal fertility companion",
-  "selectLanguage": "Select Language",
+  "welcomeSubtitle": "Your personal fertility helper",
+  "selectLanguage": "Choose Language",
   "english": "English",
   "yoruba": "Yoruba",
   "igbo": "Igbo",
@@ -11,8 +11,8 @@
   "pidgin": "Pidgin",
   "german": "Deutsch",
   "next": "Next",
-  "back": "Back",
-  "skip": "Skip",
+  "back": "Go Back",
+  "skip": "Skip Am",
   "done": "Done",
   "createAccount": "Create Account",
   "signIn": "Sign In",
@@ -22,16 +22,16 @@
   "confirmPassword": "Confirm Password",
   "firstName": "First Name",
   "lastName": "Last Name",
-  "dateOfBirth": "Date of Birth",
-  "selectDate": "Select Date",
+  "dateOfBirth": "Date Wey You Born",
+  "selectDate": "Choose Date",
   "profilePicture": "Profile Picture",
   "uploadPhoto": "Upload Photo",
-  "takePhoto": "Take Photo",
-  "chooseFromGallery": "Choose from Gallery",
+  "takePhoto": "Snap Photo",
+  "chooseFromGallery": "Choose From Gallery",
   "verifyEmail": "Verify Email",
   "verifyPhone": "Verify Phone",
   "enterOTP": "Enter OTP",
-  "otpSentTo": "OTP sent to {email}",
+  "otpSentTo": "We don send OTP to {email}",
   "@otpSentTo": {
     "description": "Message shown after OTP is sent",
     "placeholders": {
@@ -40,8 +40,8 @@
       }
     }
   },
-  "resendCode": "Resend Code",
-  "codeExpires": "Code expires in {minutes}:{seconds}",
+  "resendCode": "Send Code Again",
+  "codeExpires": "Code go expire for {minutes}:{seconds}",
   "@codeExpires": {
     "description": "Timer for OTP expiration",
     "placeholders": {
@@ -53,20 +53,20 @@
       }
     }
   },
-  "invalidEmail": "Please enter a valid email address",
-  "invalidPhone": "Please enter a valid phone number",
-  "passwordMismatch": "Passwords do not match",
+  "invalidEmail": "Abeg enter correct email address",
+  "invalidPhone": "Abeg enter correct phone number",
+  "passwordMismatch": "Passwords no match",
   "passwordTooShort": "Password must be at least 8 characters",
-  "accountCreatedSuccessfully": "Account created successfully!",
-  "profileSetupComplete": "Your profile setup is complete",
+  "accountCreatedSuccessfully": "We don create your account!",
+  "profileSetupComplete": "Your profile setup don complete",
   "termsAndConditions": "I agree to the Terms and Conditions",
   "privacyPolicy": "I agree to the Privacy Policy",
-  "acceptTerms": "Please accept the terms and conditions",
-  "emailAlreadyExists": "Email already registered",
-  "phoneAlreadyExists": "Phone number already registered",
-  "verificationFailed": "Verification failed. Please try again",
+  "acceptTerms": "Abeg accept the terms and conditions",
+  "emailAlreadyExists": "Dem don register this email before",
+  "phoneAlreadyExists": "Dem don register this phone number before",
+  "verificationFailed": "Verification fail. Abeg try again",
   "tryAgain": "Try Again",
-  "loading": "Loading...",
+  "loading": "Dey Load...",
   "error": "Error",
   "success": "Success",
   "cancel": "Cancel",
@@ -75,6 +75,6 @@
   "genderMale": "Male",
   "genderFemale": "Female",
   "genderOther": "Other",
-  "selectGender": "Select Gender",
+  "selectGender": "Choose Gender",
   "welcomeToJourney": "Welcome to your journey"
 }
