--- a/lib/l10n/app_yo.arb
+++ b/lib/l10n/app_yo.arb
@@ -98,7 +98,7 @@
   "phoneRequired": "Fóònù ni dandan",
   "invalidPhoneForCountry": "Nọ́mbà fóònù kò tọ́ fún orílẹ̀-èdè yìí",
   "otpInfoMessage": "A óò fi OTP kóòdù ránṣẹ́ láti jẹ́rìísí nọ́mbà fóònù rẹ",
-  "continue": "Tẹ̀síwájú",
+  "continueText": "Tẹ̀síwájú",
   "verifyEmailTitle": "Jẹ́rìísí Ímeèlì",
   "verifyPhoneTitle": "Jẹ́rìísí Nọ́mbà Fóònù",
   "codeSentToEmail": "Tẹ kóòdù tí a fi ránṣẹ́ sí {email}",
