Fix critical JSON syntax error in all ARB files causing gray boxes on non-English languages
- Fixed invalid comma placement in choosePreferredLanguage/choosePreferredMethod
- Moved comma from next line to end of previous line in all 4 ARB files
- Removed conflicting AppLocalizations class from localization_provider.dart
- Updated main.dart to reference LocalizationProvider.supportedLocales

This fixes gray boxes appearing after email field on Netlify for Yoruba, Igbo, and Hausa

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -77,8 +77,8 @@
   "genderOther": "Other",
   "selectGender": "Select Gender",
   "welcomeToJourney": "Welcome to your journey",
-  "choosePreferredLanguage": "Choose your preferred language"
-  ,"choosePreferredMethod": "Choose your preferred method",
+  "choosePreferredLanguage": "Choose your preferred language",
+  "choosePreferredMethod": "Choose your preferred method",
   "createAccountWithEmail": "Create account with email",
   "createAccountWithPhone": "Create account with phone",
   "emailSignupTitle": "Create Account with Email",
