--- a/lib/l10n/app_ha.arb
+++ b/lib/l10n/app_ha.arb
@@ -77,8 +77,8 @@
   "genderOther": "Wani",
   "selectGender": "Zaɓi Jinsi",
   "welcomeToJourney": "Barka da zuwa tafiyarku",
-  "choosePreferredLanguage": "Zaɓi harshen da kake so"
-  ,"choosePreferredMethod": "Zaɓi hanyar da kake so",
+  "choosePreferredLanguage": "Zaɓi harshen da kake so",
+  "choosePreferredMethod": "Zaɓi hanyar da kake so",
   "createAccountWithEmail": "Ƙirƙiri asusu da imel",
   "createAccountWithPhone": "Ƙirƙiri asusu da waya",
   "emailSignupTitle": "Ƙirƙiri Asusu da Imel",
