--- a/lib/l10n/app_ig.arb
+++ b/lib/l10n/app_ig.arb
@@ -77,8 +77,8 @@
   "genderOther": "Ndị Ọzọ",
   "selectGender": "Họrọ Okike",
   "welcomeToJourney": "Nnọọ na njem gị",
-  "choosePreferredLanguage": "Họrọ asụsụ ịchọrọ"
-  ,"choosePreferredMethod": "Họrọ ụzọ ịchọrọ",
+  "choosePreferredLanguage": "Họrọ asụsụ ịchọrọ",
+  "choosePreferredMethod": "Họrọ ụzọ ịchọrọ",
   "createAccountWithEmail": "Mepụta akaụntụ site na email",
   "createAccountWithPhone": "Mepụta akaụntụ site na ekwentị",
   "emailSignupTitle": "Mepụta Akaụntụ site na Email",
