--- a/lib/l10n/app_yo.arb
+++ b/lib/l10n/app_yo.arb
@@ -77,8 +77,8 @@
   "genderOther": "Òmíràn",
   "selectGender": "Yan Akọ tàbí Abo",
   "welcomeToJourney": "Ẹ káàbọ̀ sí ìrìnàjò rẹ",
-  "choosePreferredLanguage": "Yan èdè tí o fẹ́ jù"
-  ,"choosePreferredMethod": "Yan ọna tí o fẹ́ jù",
+  "choosePreferredLanguage": "Yan èdè tí o fẹ́ jù",
+  "choosePreferredMethod": "Yan ọna tí o fẹ́ jù",
   "createAccountWithEmail": "Ṣẹ̀dá àkọọ́lẹ̀ pẹ̀lú ímeèlì",
   "createAccountWithPhone": "Ṣẹ̀dá àkọọ́lẹ̀ pẹ̀lú fóònù",
   "emailSignupTitle": "Ṣẹ̀dá Àkọọ́lẹ̀ Pẹ̀lú Ímeèlì",
