Fix: Firebase dependencies and ARB locale issues

--- a/lib/l10n/app_ha.arb
+++ b/lib/l10n/app_ha.arb
@@ -1,87 +1,86 @@
-{
+﻿{
   "@@locale": "ha",
   "appTitle": "FertiPath",
-  {
-    "@@locale": "ha",
-    "appTitle": "FertiPath",
-
-    {
-      "@@locale": "ha",
-      "appTitle": "FertiPath",
-
-      "appTitle": "FertiPath",
-      "welcome": "Barka da zuwa",
-      "home": "Gida",
-      "calendar": "Kalanda",
-      "profile": "Bayanin martaba",
-      "settings": "Saituna",
-      "tracking": "Bin diddigi",
-      "predictions": "Hasashe",
-      "education": "Ilmi",
-      "support": "Taimako",
-
-      "login": "Shiga",
-      "signup": "Yi rajista",
-      "email": "Imel",
-      "password": "Kalmar wucewa",
-      "createAccount": "Ƙirƙiri Asusun",
-      "choosePreferredMethod": "Zaɓi hanyar da kake so",
-      "createAccountWithEmail": "Ƙirƙiri asusu ta imel",
-      "createAccountWithPhone": "Ƙirƙiri asusu ta waya",
-      "verifyPhoneTitle": "Tabbatar da Lambar Waya",
-      "codeSentToPhone": "An aika lambar zuwa {phone}",
-      "@codeSentToPhone": {"placeholders": {"phone": {}}},
-      "codeExpiresIn": "Lambar za ta ƙare cikin {time}",
-      "@codeExpiresIn": {"placeholders": {"time": {}}},
-      "verify": "Tabbatar",
-      "didntReceiveCode": "Ba ka samu lambar ba?",
-
-      "myProfile": "Profayil ɗina",
-      "profileSetup": "Saitin profayil",
-      "profileSetupComplete": "An kammala saita bayanin martaba",
-      "personalInformation": "Bayanin Kai",
-      "fullName": "Cikakken suna",
-      "birthDate": "Ranar haihuwa",
-      "selectOption": "Zaɓi zaɓi",
-
-      "symptoms": "Alamomi",
-      "logSymptom": "Rubuta alamomi",
-      "mood": "Yanayi",
-      "energy": "Ƙarfi",
-      "pain": "Ciwo",
-      "notes": "Bayanan",
-
-      "educationalHub": "Cibiyar Ilimi",
-      "articles": "Makaloli",
-      "fertilityBasics": "Asalin haihuwa",
-
-      "save": "Ajiye",
-      "cancel": "Soke",
-      "delete": "Goge",
-      "edit": "Gyara",
-      "update": "Sabuntawa",
-      "continue": "Ci gaba",
-      "continueText": "Ci gaba",
-      "selectDate": "Zaɓi Ranar",
-      "selectDateButton": "Zaɓi kwanan wata",
-      "selectedDate": "An zaɓi kwanan wata: {date}",
-      "@selectedDate": {"placeholders": {"date": {}}},
-
-      "success": "Nasara",
-      "error": "Kuskure",
-      "requiredField": "Wannan shafi yana da mahimmanci",
-      "noData": "Babu bayanai",
-      "refresh": "Sabunta",
-
-      "authInvalidEmail": "Imel ɗin bai dace ba",
-      "authInvalidPhone": "Lambar waya ba ta dace ba",
-      "authPasswordTooShort": "Kalmar sirri dole ta kasance aƙalla haruffa 8",
-      "authEmailAlreadyRegistered": "An riga an yi rajista da wannan imel",
-      "authPhoneAlreadyRegistered": "An riga an yi rajista da wannan lambar waya",
-      "authInvalidOtpFormat": "Tsarin OTP bai dace ba",
-      "authUserNotFound": "Ba a sami mai amfani ba",
-      "authNoUserLoggedIn": "Babu mai amfani da ya shiga",
-      "authCodeInvalid": "Lambar tabbatarwa ba ta dace ba",
-      "authTooManyRequests": "Yawan buƙatu. Gwada daga baya"
+  "welcome": "Barka da zuwa",
+  "home": "Gida",
+  "calendar": "Kalanda",
+  "profile": "Bayanin martaba",
+  "settings": "Saituna",
+  "tracking": "Bin diddigi",
+  "predictions": "Hasashe",
+  "education": "Ilmi",
+  "support": "Taimako",
+  "login": "Shiga",
+  "signup": "Yi rajista",
+  "email": "Imel",
+  "password": "Kalmar wucewa",
+  "createAccount": "Ƙirƙiri Asusun",
+  "choosePreferredMethod": "Zaɓi hanyar da kake so",
+  "createAccountWithEmail": "Ƙirƙiri asusu ta imel",
+  "createAccountWithPhone": "Ƙirƙiri asusu ta waya",
+  "verifyPhoneTitle": "Tabbatar da Lambar Waya",
+  "codeSentToPhone": "An aika lambar zuwa {phone}",
+  "@codeSentToPhone": {
+    "placeholders": {
+      "phone": {"type": "String"}
     }
+  },
+  "codeExpiresIn": "Lambar za ta ƙare cikin {time}",
+  "@codeExpiresIn": {
+    "placeholders": {
+      "time": { "type": "String" }
+    }
+  },
+  "verify": "Tabbatar",
+  "didntReceiveCode": "Ba ka samu lambar ba?",
+  "myProfile": "Profayil ɗina",
+  "profileSetup": "Saitin profayil",
+  "profileSetupComplete": "An kammala saita bayanin martaba",
+  "personalInformation": "Bayanin Kai",
+  "fullName": "Cikakken suna",
+  "birthDate": "Ranar haihuwa",
+  "selectOption": "Zaɓi zaɓi",
+  "symptoms": "Alamomi",
+  "logSymptom": "Rubuta alamomi",
+  "mood": "Yanayi",
+  "energy": "Ƙarfi",
+  "pain": "Ciwo",
+  "notes": "Bayanan",
+  "educationalHub": "Cibiyar Ilimi",
+  "articles": "Makaloli",
+  "fertilityBasics": "Asalin haihuwa",
+  "save": "Ajiye",
+  "cancel": "Soke",
+  "delete": "Goge",
+  "edit": "Gyara",
+  "update": "Sabuntawa",
+  "continue": "Ci gaba",
+  "continueText": "Ci gaba",
+  "selectDate": "Zaɓi Ranar",
+  "selectDateButton": "Zaɓi kwanan wata",
+  "selectedDate": "An zaɓi kwanan wata: {date}",
+  "@selectedDate": {
+    "placeholders": {
+      "date": { "type": "String" }
+    }
+  },
+  "success": "Nasara",
+  "error": "Kuskure",
+  "requiredField": "Wannan shafi yana da mahimmanci",
+  "noData": "Babu bayanai",
+  "refresh": "Sabunta",
+  "authInvalidEmail": "Imel ɗin bai dace ba",
+  "authInvalidPhone": "Lambar waya ba ta dace ba",
+  "authPasswordTooShort": "Kalmar sirri dole ta kasance aƙalla haruffa 8",
+  "authEmailAlreadyRegistered": "An riga an yi rajista da wannan imel",
+  "authPhoneAlreadyRegistered": "An riga an yi rajista da wannan lambar waya",
+  "authInvalidOtpFormat": "Tsarin OTP bai dace ba",
+  "authUserNotFound": "Ba a sami mai amfani ba",
+  "authNoUserLoggedIn": "Babu mai amfani da ya shiga",
+  "authCodeInvalid": "Lambar tabbatarwa ba ta dace ba",
+  "authTooManyRequests": "Yawan buƙatu. Gwada daga baya"
 }
+
+
+
+
