--- a/lib/l10n/app_yo.arb
+++ b/lib/l10n/app_yo.arb
@@ -1,121 +1,47 @@
-{
+﻿{
   "@@locale": "yo",
   "appTitle": "Nexus Fertility",
-<<<<<<< HEAD
-  "welcomeTitle": "Welcome to Nexus Fertility",
-  "welcomeSubtitle": "Your personal fertility companion",
-  "selectLanguage": "Select Language",
-=======
-
   "welcomeTitle": "Ẹ káàbọ̀ sí Nexus Fertility",
-  "welcomeSubtitle": "Alábàṣepọ̀ ìbísí rẹ tí ara ẹni",
-  "selectLanguage": "Yan Èdè",
-
->>>>>>> 5875813aa29915844ad55ca06839c98c1a4de123
+  "welcomeSubtitle": "Alágbátà ìmú-ọmọ ara ẹni",
+  "selectLanguage": "Yan Ede",
   "english": "English",
-  "yoruba": "Yorùbá",
+  "yoruba": "Yoruba",
   "igbo": "Igbo",
   "hausa": "Hausa",
   "pidgin": "Pidgin",
   "german": "Deutsch",
-<<<<<<< HEAD
-  "next": "Next",
-  "back": "Back",
-  "skip": "Skip",
-  "done": "Done",
-  "createAccount": "Create Account",
-  "signIn": "Sign In",
-  "email": "Email",
-  "phoneNumber": "Phone Number",
-  "password": "Password",
-  "confirmPassword": "Confirm Password",
-  "firstName": "First Name",
-  "lastName": "Last Name",
-  "dateOfBirth": "Date of Birth",
-  "selectDate": "Select Date",
-  "profilePicture": "Profile Picture",
-  "uploadPhoto": "Upload Photo",
-  "takePhoto": "Take Photo",
-  "chooseFromGallery": "Choose from Gallery",
-  "verifyEmail": "Verify Email",
-  "verifyPhone": "Verify Phone",
-  "enterOTP": "Enter OTP",
-  "otpSentTo": "OTP sent to {email}",
-=======
-
-  "next": "Tókàn",
-  "back": "Padà",
-  "skip": "Fò",
-  "done": "Parí",
-  "createAccount": "Ṣẹ̀dá Àkọọ́lẹ̀",
+  "next": "Tẹ̀síwájú",
+  "back": "Padà Síwájú",
+  "skip": "Kọjá",
+  "done": "Tán",
+  "createAccount": "Ṣẹ̀dá Àkàǹtì",
   "signIn": "Wọlé",
-  "email": "Ímeèlì",
-  "phoneNumber": "Nọ́mbà Fóònù",
-  "password": "Ọ̀rọ̀ìpamọ́",
-  "confirmPassword": "Jẹ́rìísí Ọ̀rọ̀ìpamọ́",
-  "firstName": "Orúkọ Àkọ́kọ́",
+  "email": "Email",
+  "phoneNumber": "Nọ́ńbà Fóònù",
+  "password": "Ọ̀rọ̀ ìgbaniwọ́le",
+  "confirmPassword": "Jẹ́rìsí Ọ̀rọ̀ ìgbaniwọ́le",
+  "firstName": "Orúkọ Ìbẹ̀rẹ̀",
   "lastName": "Orúkọ Ìdílé",
   "dateOfBirth": "Ọjọ́ Ìbí",
   "selectDate": "Yan Ọjọ́",
-  "profilePicture": "Àwòrán Profaili",
-  "uploadPhoto": "Gbe Àwòrán Sókè",
-  "takePhoto": "Ya Àwòrán",
-  "chooseFromGallery": "Yan Láti Galẹ́rì",
-  "verifyEmail": "Jẹ́rìísí Ímeèlì",
-  "verifyPhone": "Jẹ́rìísí Fóònù",
+  "profilePicture": "Àwòrán Profáìlì",
+  "uploadPhoto": "Gbé Àwòrán Sókè",
+  "takePhoto": "Yà Àwòrán",
+  "chooseFromGallery": "Yan Látinú Gálárì",
+  "verifyEmail": "Jẹ́rìsí Email",
+  "verifyPhone": "Jẹ́rìsí Nọ́ńbà Fóònù",
   "enterOTP": "Tẹ OTP",
-  "otpSentTo": "A fi OTP ránṣẹ́ sí {email}",
->>>>>>> 5875813aa29915844ad55ca06839c98c1a4de123
+  "otpSentTo": "OTP ránṣẹ́ sí {email}",
   "@otpSentTo": {
     "description": "Message shown after OTP is sent",
-    "placeholders": {"email": {"type": "String"}}
+    "placeholders": {
+      "email": {
+        "type": "String"
+      }
+    }
   },
-<<<<<<< HEAD
-  "resendCode": "Resend Code",
-  "codeExpires": "Code expires in {minutes}:{seconds}",
-  "@codeExpires": {"description": "Timer for OTP expiration","placeholders": {"minutes": {"type": "String"},"seconds": {"type": "String"}}},
-  "invalidEmail": "Please enter a valid email address",
-  "invalidPhone": "Please enter a valid phone number",
-  "passwordMismatch": "Passwords do not match",
-  "passwordTooShort": "Password must be at least 8 characters",
-  "accountCreatedSuccessfully": "Account created successfully!",
-  "profileSetupComplete": "Your profile setup is complete",
-  "termsAndConditions": "I agree to the Terms and Conditions",
-  "privacyPolicy": "I agree to the Privacy Policy",
-  "acceptTerms": "Please accept the terms and conditions",
-  "emailAlreadyExists": "Email already registered",
-  "phoneAlreadyExists": "Phone number already registered",
-  "verificationFailed": "Verification failed. Please try again",
-  "tryAgain": "Try Again",
-  "loading": "Loading...",
-  "error": "Error",
-  "success": "Success",
-  "cancel": "Cancel",
-  "save": "Save",
-  "logout": "Logout",
-  "genderMale": "Male",
-  "genderFemale": "Female",
-  "genderOther": "Other",
-  "selectGender": "Select Gender",
-  "profileTitle": "Profile",
-  "editProfile": "Edit profile",
-  "audioGuidance": "Audio Guidance",
-  "ttcHistory": "TTC History",
-  "faithPreference": "Faith Preference",
-  "cycleLength": "Cycle Length",
-  "lastPeriodDate": "Last Period Date",
-  "continueButton": "Continue",
-  "joined": "Joined",
-  "audioLessons": "Audio Learning",
-  "play": "Play",
-  "stop": "Stop",
-  "supportHub": "Support Hub",
-  "dailyAffirmation": "Daily Affirmations",
-  "chooseSupportMode": "Choose your support mode",
-  "exploreCommunityGroups": "Explore Community Groups"
-=======
   "resendCode": "Tún Kóòdù Ránṣẹ́",
-  "codeExpires": "Kóòdù yóò parẹ́ ní {minutes}:{seconds}",
+  "codeExpires": "Kóòdù yóò parẹ̀ ní {minutes}:{seconds}",
   "@codeExpires": {
     "description": "Timer for OTP expiration",
     "placeholders": {
@@ -127,54 +53,54 @@
       }
     }
   },
-  "invalidEmail": "Jọ̀wọ́ tẹ àdírẹ́ẹ̀sì ímeèlì tó tọ́",
-  "invalidPhone": "Jọ̀wọ́ tẹ nọ́mbà fóònù tó tọ́",
-  "passwordMismatch": "Àwọn ọ̀rọ̀ìpamọ́ kò báramu",
-  "passwordTooShort": "Ọ̀rọ̀ìpamọ́ gbọdọ̀ jẹ́ ó kéré jù lẹ́tà 8",
-  "accountCreatedSuccessfully": "A ṣẹ̀dá àkọọ́lẹ̀ pẹ̀lú àṣeyọrí!",
-  "profileSetupComplete": "Àtòjọ profaili rẹ ti parí",
-  "termsAndConditions": "Mo gbà àwọn Òfin àti Ìpò",
-  "privacyPolicy": "Mo gbà Ìlànà Àṣírí",
+  "invalidEmail": "Jọ̀wọ́ tẹ àdírẹ́sì ẹ̀mèèlì tó tọ́",
+  "invalidPhone": "Jọ̀wọ́ tẹ nọ́ńbà fóònù tó tọ́",
+  "passwordMismatch": "Àwọn Ọ̀rọ̀ ìgbaniwọ́le kò báramu",
+  "passwordTooShort": "Ọ̀rọ̀ ìgbaniwọ́le gbọdọ jẹ́ ó kéré jù látà 8",
+  "accountCreatedSuccessfully": "A ṣẹ̀dá àkàǹtì pẹ̀lú ẹ̀ṣẹ́!",
+  "profileSetupComplete": "Àtòjọ profáìlì rẹ ti parí",
+  "termsAndConditions": "Mo gba àwọn Òfin àti Ìpò",
+  "privacyPolicy": "Mo gba Ìlànà Àṣírí",
   "acceptTerms": "Jọ̀wọ́ gba àwọn òfin àti ìpò",
-  "emailAlreadyExists": "A ti forúkọsílẹ̀ ímeèlì náà tẹ́lẹ̀",
-  "phoneAlreadyExists": "A ti forúkọsílẹ̀ nọ́mbà fóònù náà tẹ́lẹ̀",
-  "verificationFailed": "Ìjẹ́rìísí kùnà. Jọ̀wọ́ gbìyànjú lẹ́ẹ̀kan sí i",
+  "emailAlreadyExists": "A ti forúkọsílẹ̀ ẹ̀mèèlì náà tẹ́lẹ̀",
+  "phoneAlreadyExists": "A ti forúkọsílẹ̀ nọ́ńbà fóònù náà tẹ́lẹ̀",
+  "verificationFailed": "Ìjẹ́rìsí kùnà. Jọ̀wọ́ gbìyànjú lẹ́ẹ̀kan sí i",
   "tryAgain": "Gbìyànjú Lẹ́ẹ̀kan Sí i",
-  "loading": "Ń ṣiṣẹ́...",
+  "loading": "Ǹ ṣiṣẹ́...",
   "error": "Àṣìṣe",
   "success": "Àṣeyọrí",
-  "cancel": "Fagílé",
+  "cancel": "Fagilé",
   "save": "Fipamọ́",
   "logout": "Jáde",
   "genderMale": "Ọkùnrin",
   "genderFemale": "Obìnrin",
-  "genderOther": "Òmíràn",
+  "genderOther": "Ọmọ ẹgbẹ́",
   "selectGender": "Yan Akọ tàbí Abo",
   "welcomeToJourney": "Ẹ káàbọ̀ sí ìrìnàjò rẹ",
   "choosePreferredLanguage": "Yan èdè tí o fẹ́ jù",
   "choosePreferredMethod": "Yan ọna tí o fẹ́ jù",
-  "createAccountWithEmail": "Ṣẹ̀dá àkọọ́lẹ̀ pẹ̀lú ímeèlì",
-  "createAccountWithPhone": "Ṣẹ̀dá àkọọ́lẹ̀ pẹ̀lú fóònù",
-  "emailSignupTitle": "Ṣẹ̀dá Àkọọ́lẹ̀ Pẹ̀lú Ímeèlì",
-  "emailSignupSubtitle": "Tẹ imeeli àti ọ̀rọ̀ìpamọ́ rẹ",
-  "emailAddressLabel": "Àdírẹ́ẹ̀sì Ímeèlì",
-  "emailHint": "wo@example.com",
-  "emailRequired": "Ímeèlì ni dandan",
-  "invalidEmailFormat": "Àdírẹ́ẹ̀sì ímeèlì kò tọ́",
-  "passwordHint": "Tẹ ọ̀rọ̀ìpamọ́",
-  "passwordRequired": "Ọ̀rọ̀ìpamọ́ ni dandan",
-  "confirmPasswordHint": "Jẹ́rìísí ọ̀rọ̀ìpamọ́",
-  "confirmPasswordRequired": "Jọ̀wọ́ jẹ́rìísí ọ̀rọ̀ìpamọ́",
-  "phoneSignupTitle": "Ṣẹ̀dá Àkọọ́lẹ̀ Pẹ̀lú Fóònù",
+  "createAccountWithEmail": "Ṣẹ̀dá Àkàǹtì Nípa Ẹ̀mèèlì",
+  "createAccountWithPhone": "Ṣẹ̀dá Àkàǹtì Nípa Fóònù",
+  "emailSignupTitle": "Ṣẹ̀dá Àkàǹtì Nípa Ẹ̀mèèlì",
+  "emailSignupSubtitle": "Tẹ ẹ̀mèèlì àti ọ̀rọ̀ ìgbaniwọ́le rẹ",
+  "emailAddressLabel": "Àdírẹ́sì Ẹ̀mèèlì",
+  "emailHint": "wọ@àpẹrẹ.com",
+  "emailRequired": "Ẹ̀mèèlì ni dandan",
+  "invalidEmailFormat": "Àdírẹ́sì ẹ̀mèèlì kò tọ́",
+  "passwordHint": "Tẹ ọ̀rọ̀ ìgbaniwọ́le",
+  "passwordRequired": "Ọ̀rọ̀ ìgbaniwọ́le ni dandan",
+  "confirmPasswordHint": "Jẹ́rìsí ọ̀rọ̀ ìgbaniwọ́le",
+  "confirmPasswordRequired": "Jọ̀wọ́ jẹ́rìsí ọ̀rọ̀ ìgbaniwọ́le",
+  "phoneSignupTitle": "Ṣẹ̀dá Àkàǹtì Nípa Fóònù",
   "phoneSignupSubtitle": "A óò fi OTP kóòdù ránṣẹ́ sí ọ",
-  "phoneNumberLabel": "Nọ́mbà Fóònù",
-  "phoneNumberHint": "Nọ́mbà fóònù",
+  "phoneNumberLabel": "Nọ́ńbà Fóònù",
+  "phoneNumberHint": "Nọ́ńbà fóònù",
   "phoneRequired": "Fóònù ni dandan",
-  "invalidPhoneForCountry": "Nọ́mbà fóònù kò tọ́ fún orílẹ̀-èdè yìí",
-  "otpInfoMessage": "A óò fi OTP kóòdù ránṣẹ́ láti jẹ́rìísí nọ́mbà fóònù rẹ",
+  "invalidPhoneForCountry": "Nọ́ńbà fóònù kò tọ́ fún orílẹ̀-èdè yìí",
+  "otpInfoMessage": "A óò fi OTP kóòdù ránṣẹ́ látí jẹ́rìsí nọ́ńbà fóònù rẹ",
   "continueText": "Tẹ̀síwájú",
-  "verifyEmailTitle": "Jẹ́rìísí Ímeèlì",
-  "verifyPhoneTitle": "Jẹ́rìísí Nọ́mbà Fóònù",
+  "verifyEmailTitle": "Jẹ́rìsí Ẹ̀mèèlì",
+  "verifyPhoneTitle": "Jẹ́rìsí Nọ́ńbà Fóònù",
   "codeSentToEmail": "Tẹ kóòdù tí a fi ránṣẹ́ sí {email}",
   "@codeSentToEmail": {
     "description": "Message showing where OTP was sent",
@@ -193,7 +119,7 @@
       }
     }
   },
-  "codeExpiresIn": "Kóòdù yóò parẹ́ ní {time}",
+  "codeExpiresIn": "Kóòdù yóò parẹ̀ ní {time}",
   "@codeExpiresIn": {
     "description": "Timer showing code expiration",
     "placeholders": {
@@ -202,58 +128,57 @@
       }
     }
   },
-  "verify": "Jẹ́rìísí",
-  "didntReceiveCode": "Ko gbà kóòdù? Tún ránṣẹ́",
-  "enterAll6Digits": "Jọ̀wọ́ tẹ gbogbo nọ́mbà 6",
-  "profile": "Profaili",
-  "completeProfile": "Jẹ ki a pari profaili rẹ",
-  "personalizeGuide": "Eyi yoo ran wa lọwọ lati ṣe itọsọna ayipo rẹ ni ara ẹni",
+  "verify": "Jẹ́rìsí",
+  "didntReceiveCode": "Kò gbà kóòdù? Tún ránṣẹ́",
+  "enterAll6Digits": "Jọ̀wọ́ tẹ gbogbo nọ́ńbà 6",
+  "profile": "Profáìlì",
+  "completeProfile": "Jẹ́ kí a pari profáìlì rẹ",
+  "personalizeGuide": "Eyi yoo ran wa lọ́wọ́ láti ṣe ìtọ́sọ́na ayipo rẹ ni ara ẹni",
   "age": "Ọjọ ori",
-  "cycleLength": "Gigun ayipo",
-  "days": "Ọjọ {count}",
-  "averageDaysBetweenPeriods": "Nọmba aropin ti awọn ọjọ laarin awọn akoko oṣu rẹ",
-  "lastPeriodDate": "Ọjọ akoko oṣu to kẹhin",
-  "selectDate": "Yan ọjọ",
-  "whenLastBleeding": "Nigbati eje oṣu rẹ to kẹhin bẹrẹ",
-  "ttcHistory": "Itan TTC",
-  "faithPreference": "Yiyan igbagbọ",
+  "cycleLength": "Gígùn ayipo",
+  "days": "Ọjọ́ {count}",
+  "averageDaysBetweenPeriods": "Nọ́ńbà àròpín ti àwọn ọjọ́ laarin àwọn akoko oṣù rẹ",
+  "lastPeriodDate": "Ọjọ́ akoko oṣù tó kẹ́hìn",
+  "selectDate": "Yan ọjọ́",
+  "whenLastBleeding": "Nígbàtí ẹjẹ oṣù rẹ tó kẹ́hìn bẹ̀rẹ̀",
+  "ttcHistory": "Ìtàn TTC",
+  "faithPreference": "Yíyàn ìgbàgbọ́",
   "language": "Ede",
-  "audioGuidance": "Itọsọna ohun",
-  "agreeTerms": "Mo gba awọn ofin ati Ilana Asiri",
-  "profileSetupComplete": "Ipari profaili ti pari!",
+  "audioGuidance": "Ìtọ́sọ́na ohùn",
+  "agreeTerms": "Mo gba àwọn ofin ati Ilana Asiri",
+  "profileSetupComplete": "Ipari profáìlì ti pari!",
   "selectOption": "Yan aṣayan",
-  "home": "Ile",
-  "calendar": "Kalẹnda",
-  "learn": "Kọ ẹkọ",
-  "todaysFertilityInsight": "Imọran ọmọbinrin ti oni",
-  "nextFertilityWindow": "Ferese ọmọbinrin rẹ ti n bọ lati Dec 23",
-  "trackingBenefits": "Nipa titọpa ọmọbinrin rẹ o ni oye ti o dara julọ nipa ayipo rẹ.",
-  "stayPositive": "O n ṣe daradara! Duro ni idayatọ ki o si dojukọ!",
-  "learnHub": "Ile-ikawe",
-  "logSymptoms": "Forukọsilẹ awọn ami aisan",
-  "bleeding": "Eje",
-  "mood": "Ișesi ọkan",
+  "home": "Ilé",
+  "calendar": "Kalẹ́ndà",
+  "learn": "Kọ́ ẹkọ́",
+  "todaysFertilityInsight": "Ìmọ̀ran ọmúbìnrin ti oni",
+  "nextFertilityWindow": "Fẹ́rèsè ọmúbìnrin rẹ tí n bọ̀ láti Dec 23",
+  "trackingBenefits": "Nípa títọpa ọmúbìnrin rẹ o ní oye tí o dara jùlọ nípa ayipo rẹ.",
+  "stayPositive": "O n ṣe daradara! Dúró ní ìdáyàtọ̀ kí o sì dojúkọ̀!",
+  "learnHub": "Ilé-ìkàwé",
+  "logSymptoms": "Forúkọsílẹ̀ àwọn àmì àìsàn",
+  "bleeding": "Ẹjẹ",
+  "mood": "Ìhùwàsí ọkàn",
   "cervicalMucus": "Omi ọrun",
-  "pain": "Irora",
-  "notes": "Awọn akọsilẹ",
-  "loggedSymptoms": "Awọn ami aisan ti a forukọsilẹ",
-  "educationalContentComingSoon": "Akoonu ẹkọ n bọ laipẹ",
-  "authInvalidEmail": "Ọna email ko tọ",
-  "authInvalidPhone": "Nọmba foonu ko tọ",
-  "authPasswordTooShort": "Ọrọ igbaniwọle gbọdọ jẹ o kere ju awọn lẹta 8",
-  "authEmailAlreadyRegistered": "A ti forukọsilẹ email yii tẹlẹ",
-  "authPhoneAlreadyRegistered": "A ti forukọsilẹ nọmba foonu yii tẹlẹ",
-  "authInvalidOtpFormat": "Ọna OTP ko tọ",
-  "authUserNotFound": "A ko rii olumulo",
-  "authNoUserLoggedIn": "Ko si olumulo ti o wọle",
-  "welcomeBack": "Kabo pada",
-  "logInToAccount": "Wọle si akaunt rẹ",
-  "emailAddress": "Adiresi email",
-  "emailHintLogin": "iwo@apere.com",
-  "passwordLabel": "Ọrọ igbaniwọle",
-  "enterPassword": "Tẹ ọro igbaniwọle sii",
-  "forgotPassword": "Ṣe o gbàgbé ọro igbaniwọle?",
-  "logIn": "Wọle"
-
->>>>>>> 5875813aa29915844ad55ca06839c98c1a4de123
+  "pain": "Ìrora",
+  "notes": "Àwọn akọsílẹ̀",
+  "loggedSymptoms": "Àwọn àmì àìsàn tí a forúkọsílẹ̀",
+  "educationalContentComingSoon": "Akoonu ẹkọ n bọ̀ láipẹ́",
+  "authInvalidEmail": "Ọna email kò tọ́",
+  "authInvalidPhone": "Nọ́ńbà fóònù kò tọ́",
+  "authPasswordTooShort": "Ọ̀rọ̀ ìgbaniwọ́le gbọdọ jẹ́ o kéré jù àwọn látà 8",
+  "authEmailAlreadyRegistered": "A ti forúkọsílẹ̀ ẹ̀mèèlì yìí tẹ́lẹ̀",
+  "authPhoneAlreadyRegistered": "A ti forúkọsílẹ̀ nọ́ńbà fóònù yìí tẹ́lẹ̀",
+  "authInvalidOtpFormat": "Ọna OTP kò tọ́",
+  "authUserNotFound": "A kò ríi olùmúlò",
+  "authNoUserLoggedIn": "Kò sí olùmúlò tí o wọlé",
+  "welcomeBack": "Káàbọ̀ padà",
+  "logInToAccount": "Wọlé sí àkàǹtì rẹ",
+  "emailAddress": "Adirẹsi email",
+  "emailHintLogin": "ìwọ@àpẹrẹ.com",
+  "passwordLabel": "Ọ̀rọ̀ ìgbaniwọ́le",
+  "enterPassword": "Tẹ ọ̀rọ̀ ìgbaniwọ́le sí i",
+  "forgotPassword": "Ṣé o gbàgbé ọ̀rọ̀ ìgbaniwọ́le?",
+  "logIn": "Wọlé"
 }
+
