FINAL FIX: Correctly formatted pcm.arb and fixed l10n.yaml

--- a/lib/l10n/app_pcm.arb
+++ b/lib/l10n/app_pcm.arb
@@ -1,141 +1,87 @@
 ﻿{
-    "profileSetupComplete":  "Profile setup complete!",
-    "next":  "Next",
-    "codeExpires":  "Code expires in {minutes}:{seconds}",
-    "mood":  "Mood",
-    "continueText":  "Continue",
-    "logInToAccount":  "Log in to your account",
-    "confirmPasswordHint":  "Confirm password",
-    "password":  "Password",
-    "whenLastBleeding":  "When your last menstrual bleeding started",
-    "language":  "Language",
-    "save":  "Save",
-    "learn":  "Learn",
-    "enterPassword":  "Enter password",
-    "german":  "Deutsch",
-    "emailRequired":  "Email is required",
-    "cycleLength":  "Cycle Length",
-    "invalidEmail":  "Please enter a valid email address",
-    "phoneRequired":  "Phone is required",
-    "english":  "English",
-    "verifyPhone":  "Verify Phone",
-    "emailSignupSubtitle":  "Enter your email and password",
-    "cervicalMucus":  "Cervical Mucus",
-    "createAccountWithEmail":  "Create account with email",
-    "profileTitle":  "Profile",
-    "nextFertilityWindow":  "Your next fertility window is from Dec 23",
-    "signIn":  "Sign In",
-    "phoneNumberHint":  "Phone number",
-    "emailAlreadyExists":  "Email already registered",
-    "faithPreference":  "Faith Preference",
-    "bleeding":  "Bleeding",
-    "otpInfoMessage":  "We\u0027ll send an OTP code to verify your phone number",
-    "pain":  "Pain",
-    "didntReceiveCode":  "Didn\u0027t receive code? Resend",
-    "phoneNumberLabel":  "Phone Number",
-    "pidgin":  "Pidgin",
-    "email":  "Email",
-    "skip":  "Skip",
-    "notes":  "Notes",
-    "authEmailAlreadyRegistered":  "Email already registered",
-    "passwordHint":  "Enter password",
-    "takePhoto":  "Take Photo",
-    "agreeTerms":  "I agree to the Terms and Conditions and Privacy Policy",
-    "passwordLabel":  "Password",
-    "selectDate":  "Select date",
-    "verify":  "Verify",
-    "phoneNumber":  "Phone Number",
-    "termsAndConditions":  "I agree to the Terms and Conditions",
-    "codeExpiresIn":  "Code expires in {time}",
-    "audioGuidance":  "Audio Guidance",
-    "igbo":  "Igbo",
-    "loading":  "Loading...",
-    "averageDaysBetweenPeriods":  "Average number of days between your periods",
-    "genderOther":  "Other",
-    "age":  "Age",
-    "verifyEmailTitle":  "Verify Email",
-    "home":  "Home",
-    "acceptTerms":  "Please accept the terms and conditions",
-    "authUserNotFound":  "User not found",
-    "lastPeriodDate":  "Last Period Date",
-    "editProfile":  "Edit profile",
-    "authPasswordTooShort":  "Password must be at least 8 characters",
-    "back":  "Back",
-    "emailHint":  "you@example.com",
-    "days":  "{count} Days",
-    "enterAll6Digits":  "Please enter all 6 digits",
-    "learnHub":  "Learn Hub",
-    "tryAgain":  "Try Again",
-    "authInvalidOtpFormat":  "Invalid OTP format",
-    "codeSentToPhone":  "Enter the code we sent to {phone}",
-    "phoneAlreadyExists":  "Phone number already registered",
-    "appTitle":  "Nexus Fertility",
-    "logout":  "Logout",
-    "genderMale":  "Male",
-    "choosePreferredLanguage":  "Choose your preferred language",
-    "selectGender":  "Select Gender",
-    "success":  "Success",
-    "otpSentTo":  "OTP sent to {email}",
-    "done":  "Done",
-    "verificationFailed":  "Verification failed. Please try again",
-    "passwordMismatch":  "Passwords do not match",
-    "personalizeGuide":  "This will help us personalize your cycle guide",
-    "authInvalidEmail":  "Invalid email format",
-    "selectOption":  "Select option",
-    "verifyPhoneTitle":  "Verify Phone Number",
-    "cancel":  "Cancel",
-    "invalidPhoneForCountry":  "Invalid phone number for this country",
-    "calendar":  "Calendar",
-    "invalidPhone":  "Please enter a valid phone number",
-    "passwordRequired":  "Password is required",
-    "genderFemale":  "Female",
-    "welcomeToJourney":  "Welcome to your journey",
-    "lastName":  "Last Name",
-    "resendCode":  "Resend Code",
-    "trackingBenefits":  "By tracking your fertility you gain a better understanding of your cycle.",
-    "createAccountWithPhone":  "Create account with phone",
-    "completeProfile":  "Let\u0027s complete your profile",
-    "authInvalidPhone":  "Invalid phone number format",
-    "privacyPolicy":  "I agree to the Privacy Policy",
-    "hausa":  "Hausa",
-    "invalidEmailFormat":  "Invalid email format",
-    "createAccount":  "Create Account",
-    "phoneSignupSubtitle":  "We will send you an OTP code",
-    "forgotPassword":  "Forgot Password?",
-    "chooseFromGallery":  "Choose from Gallery",
-    "emailAddressLabel":  "Email Address",
-    "confirmPassword":  "Confirm Password",
-    "choosePreferredMethod":  "Choose your preferred method",
-    "emailSignupTitle":  "Create Account with Email",
-    "welcomeBack":  "Welcome Back",
-    "codeSentToEmail":  "Enter the code we sent to {email}",
-    "passwordTooShort":  "Password must be at least 8 characters",
-    "profile":  "Profile",
-    "logIn":  "Log In",
-    "firstName":  "First Name",
-    "welcomeSubtitle":  "Your personal fertility companion",
-    "stayPositive":  "You\u0027re doing great! Stay positive and be focused!",
-    "profilePicture":  "Profile Picture",
-    "uploadPhoto":  "Upload Photo",
-    "verifyEmail":  "Verify Email",
-    "ttcHistory":  "TTC History",
-    "educationalContentComingSoon":  "Educational content coming soon",
-    "selectLanguage":  "Select Language",
-    "logSymptoms":  "Log Symptoms",
-    "todaysFertilityInsight":  "Today\u0027s Fertility Insight",
-    "enterOTP":  "Enter OTP",
-    "authNoUserLoggedIn":  "No user logged in",
-    "confirmPasswordRequired":  "Please confirm password",
-    "emailAddress":  "Email Address",
-    "welcomeTitle":  "Welcome to Nexus Fertility",
-    "error":  "Error",
-    "authPhoneAlreadyRegistered":  "Phone number already registered",
-    "phoneSignupTitle":  "Create Account with Phone",
-    "loggedSymptoms":  "Logged Symptoms",
-    "accountCreatedSuccessfully":  "Account created successfully!",
-    "dateOfBirth":  "Date of Birth",
-    "yoruba":  "Yoruba",
-    "emailHintLogin":  "you@example.com"
+  "@@locale": "pcm",
+  "appTitle": "Nexus Fertility App",
+  "welcome": "Welcome",
+  "login": "Login",
+  "register": "Register",
+  "phoneNumber": "Phone Number",
+  "enterPhone": "Enter your phone number",
+  "password": "Password",
+  "enterPassword": "Enter your password",
+  "forgotPassword": "Forgot password?",
+  "dontHaveAccount": "No get account?",
+  "signUp": "Sign Up",
+  "alreadyHaveAccount": "You get account already?",
+  "firstName": "First Name",
+  "lastName": "Last Name",
+  "email": "Email",
+  "enterEmail": "Enter your email",
+  "confirmPassword": "Confirm Password",
+  "enterConfirmPassword": "Enter your password again",
+  "createAccount": "Create Account",
+  "codeSentToPhone": "Code don send to {phone}",
+  "@codeSentToPhone": {
+    "description": "Message shown when code is sent to phone",
+    "placeholders": {
+      "phone": {
+        "type": "String"
+      }
+    }
+  },
+  "codeExpiresIn": "Code go expire for {time}",
+  "@codeExpiresIn": {
+    "description": "Timer showing code expiration",
+    "placeholders": {
+      "time": {
+        "type": "String"
+      }
+    }
+  },
+  "verify": "Verify",
+  "resendCode": "Resend Code",
+  "didntReceiveCode": "You no receive code?",
+  "home": "Home",
+  "predictions": "Predictions",
+  "history": "History",
+  "settings": "Settings",
+  "profile": "Profile",
+  "logout": "Logout",
+  "language": "Language",
+  "notifications": "Notifications",
+  "help": "Help",
+  "about": "About",
+  "privacyPolicy": "Privacy Policy",
+  "termsOfService": "Terms of Service",
+  "fertilityScore": "Fertility Score",
+  "cycleDay": "Cycle Day",
+  "ovulationPrediction": "Ovulation Prediction",
+  "nextPeriod": "Next Period",
+  "symptoms": "Symptoms",
+  "mood": "Mood",
+  "temperature": "Temperature",
+  "cervicalMucus": "Cervical Mucus",
+  "save": "Save",
+  "cancel": "Cancel",
+  "edit": "Edit",
+  "delete": "Delete",
+  "add": "Add",
+  "search": "Search",
+  "filter": "Filter",
+  "sort": "Sort",
+  "loading": "Loading...",
+  "error": "Error",
+  "success": "Success",
+  "warning": "Warning",
+  "info": "Info",
+  "retry": "Retry",
+  "ok": "OK",
+  "yes": "Yes",
+  "no": "No",
+  "back": "Back",
+  "next": "Next",
+  "skip": "Skip",
+  "done": "Done",
+  "submit": "Submit",
+  "continue": "Continue",
+  "finish": "Finish"
 }
-
-
